# tanknet

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
src/client/: Client.cpp  Client.h
src/game/: Math.h  Sim.cpp  Sim.h  World.cpp  World.h
src/net/: NetCommon.h  Protocol.h  Serialize.cpp  Serialize.h
src/render/: Render.cpp  Render.h
src/server/: Server.cpp  Server.h
